# hs-js-turtle

./: .gitignore  Evaluator.hs  ExprTree.hs  Main.hs  Parser.hs  SymbolTable.hs  Tokenizer.hs  TurtlePrimitives.hs  destruct.hs  examples.txt  hello.html  index-dev.html  index.html  main.css  notes  notes.txt  state-derv.hs  structure-refs.hs  tinker.hs  todo.txt  turtle-haste.hs  turtle.cabal
hs-core/: SymbolTable.hs  TurtlePrimitives.hs
hs-src/cmd-line/: Main.hs
hs-src/lib/: Color.hs  Evaluator.hs  ExprTree.hs  Parser.hs  SymbolTable.hs  Tokenizer.hs  TurtlePrimitives.hs
js/: Dispatcher.js  Evaluator.js  Parser.js  Store.js  SymbolTable.js  Tokenizer.js  UserEvents.js  Views.js  app-bundle.js  app.js  dev.js  lib  main.js  test.html  turtle-svg-bundle.js
js-core/: Parser.js  SymbolTable.js  TurtlePrimitives.js  TurtleSVG.js  notes.txt
js-src/: Color.js  Evaluator.js  Parser.js  ParserTestEntry.js  SymbolTable.js  Tokenizer.js  TurtlePrimitives.js  TurtleSVG.js  color-generator.js  colors.js  dev.js  notes.txt  turtle-svg-main.js
jsx/: Views.js  main.js
scratch/: turtle-haste.hs
tests/: TestNodeProgram.hs  TestsForEvaluator.hs  TestsForParser.hs  TestsForTokenizer.hs  test.hs
